-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 RC 1
-
None
-
Mac OS X 10.7 - Cocoa
-
-
f6cc1f3aeae795e7ed67338b17b860df9f5146a7
When doing Control + click on Mac it should send a right button mouse event but this does not work. This means that context menus do not show up with this combination either.
- is required for
-
QTBUG-27426 Qt 5.0 Final release tasks
-
- Closed
-
| For Gerrit Dashboard: QTBUG-28350 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 41649,2 | Ensure ctrl + click sends a right mouse button press in Cocoa | stable | qt/qtbase | Status: MERGED | +2 | 0 |